improved input, fixed zoomable image not returning scroll pos on ios, fixed white bars on ios below browser

--- a/src/app.css
+++ b/src/app.css
@@ -91,11 +91,17 @@ p {
     font-size: 1rem;
 }
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+}
+
 body {
     background-color: var(--color-zinc-800);
-    overflow-x: hidden;
     background-repeat: no-repeat;
-    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 li {
